Updating Launch Feature

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     <span class="stat-label">Successful Launches</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">12</span>
+                    <span class="stat-number">6</span>
                     <span class="stat-label">Youth Members</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">2,847</span>
+                    <span class="stat-number">857</span>
                     <span class="stat-label">Max Altitude (ft)</span>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                         <h3>4-H Excellence</h3>
                         <p>Competing in state and national 4-H rocketry competitions with innovative designs and teamwork.</p>
                         <div class="card-footer">
-                            <span class="card-stat">3 Championships Won</span>
+                            <span class="card-stat">National Level Award</span>
                         </div>
                     </div>
                     <div class="highlight-card">
@@ -94,7 +94,7 @@
                         <h3>Youth Development</h3>
                         <p>Building leadership, problem-solving, and technical skills through aerospace engineering projects.</p>
                         <div class="card-footer">
-                            <span class="card-stat">12 Active Members</span>
+                            <span class="card-stat">6 Active Members</span>
                         </div>
                     </div>
                     <div class="highlight-card">
