complete website revamp

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4-H Wake Rocketry - Youth Model Rocketry Program</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <div class="side-rockets left">
-        <img src="rocket photos/images.jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (2).jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (5).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images.jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (2).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (5).jpg" alt="Rocket" class="rocket-photo">
     </div>
     <div class="side-rockets right">
-        <img src="rocket photos/images (1).jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (3).jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (6).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (1).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (3).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (6).jpg" alt="Rocket" class="rocket-photo">
     </div>
     <nav class="navbar">
         <div class="nav-container">
@@ -27,11 +27,11 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link active">Home</a></li>
-                <li><a href="team.html" class="nav-link">Team</a></li>
-                <li><a href="rockets.html" class="nav-link">Rockets</a></li>
-                <li><a href="launches.html" class="nav-link">Launches</a></li>
-                <li><a href="gallery.html" class="nav-link">Gallery</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
+                <li><a href="Pages/team.html" class="nav-link">Team</a></li>
+                <li><a href="Pages/rockets.html" class="nav-link">Rockets</a></li>
+                <li><a href="Pages/launches.html" class="nav-link">Launches</a></li>
+                <li><a href="Pages/gallery.html" class="nav-link">Gallery</a></li>
+                <li><a href="Pages/contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -48,8 +48,8 @@
             <h1>Welcome to <span class="higwhlight-text">4-H Wake Rocketry</span></h1>
             <p>Inspiring young minds to reach for the stars through hands-on STEM education and competitive model rocketry.</p>
             <div class="hero-buttons">
-                <a href="team.html" class="cta-button primary">Meet Our Team</a>
-                <a href="gallery.html" class="cta-button secondary">View Gallery</a>
+                <a href="Pages/team.html" class="cta-button primary">Meet Our Team</a>
+                <a href="Pages/gallery.html" class="cta-button secondary">View Gallery</a>
             </div>
             <div class="hero-stats">
                 <div class="stat-item">
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="launches.html" class="view-all">View All Launches →</a>
+                <a href="Pages/launches.html" class="view-all">View All Launches →</a>
             </div>
         </section>
     </main>
