--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - 4-H Wake Rocketry</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <div class="side-rockets left">
-        <img src="rocket photos/images.jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (2).jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (5).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images.jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (2).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (5).jpg" alt="Rocket" class="rocket-photo">
     </div>
     <div class="side-rockets right">
-        <img src="rocket photos/images (1).jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (3).jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (6).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (1).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (3).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (6).jpg" alt="Rocket" class="rocket-photo">
     </div>
     <nav class="navbar">
         <div class="nav-container">
@@ -24,12 +24,12 @@
                 4-H Wake Rocketry
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="team.html" class="nav-link">Team</a></li>
-                <li><a href="rockets.html" class="nav-link">Rockets</a></li>
-                <li><a href="launches.html" class="nav-link">Launches</a></li>
-                <li><a href="gallery.html" class="nav-link">Gallery</a></li>
-                <li><a href="contact.html" class="nav-link active">Contact</a></li>
+                <li><a href="index.html" class="nav-link active">Home</a></li>
+                <li><a href="Pages/team.html" class="nav-link">Team</a></li>
+                <li><a href="Pages/rockets.html" class="nav-link">Rockets</a></li>
+                <li><a href="Pages/launches.html" class="nav-link">Launches</a></li>
+                <li><a href="Pages/gallery.html" class="nav-link">Gallery</a></li>
+                <li><a href="Pages/contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
