--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - 4-H Wake Rocketry</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <div class="side-rockets left">
-        <img src="rocket photos/images.jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (2).jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (5).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images.jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (2).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (5).jpg" alt="Rocket" class="rocket-photo">
     </div>
     <div class="side-rockets right">
-        <img src="rocket photos/images (1).jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (3).jpg" alt="Rocket" class="rocket-photo">
-        <img src="rocket photos/images (6).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (1).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (3).jpg" alt="Rocket" class="rocket-photo">
+        <img src="Photos/rocket photos/images (6).jpg" alt="Rocket" class="rocket-photo">
     </div>
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
                 <img src="4h logo.png" alt="4-H Logo">
-                🚀 4-H Wake Rocketry
+                4-H Wake Rocketry
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="team.html" class="nav-link">Team</a></li>
-                <li><a href="rockets.html" class="nav-link">Rockets</a></li>
-                <li><a href="launches.html" class="nav-link">Launches</a></li>
-                <li><a href="gallery.html" class="nav-link active">Gallery</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
+                <li><a href="index.html" class="nav-link active">Home</a></li>
+                <li><a href="Pages/team.html" class="nav-link">Team</a></li>
+                <li><a href="Pages/rockets.html" class="nav-link">Rockets</a></li>
+                <li><a href="Pages/launches.html" class="nav-link">Launches</a></li>
+                <li><a href="Pages/gallery.html" class="nav-link">Gallery</a></li>
+                <li><a href="Pages/contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -165,11 +165,6 @@
             <div class="container">
                 <h2>Featured Videos</h2>
                 <div class="highlight-grid">
-                    <div class="highlight-card">
-                        <h3>🎥 State Championship Victory</h3>
-                        <p>Watch our Green Thunder rocket win 1st place at the NC State 4-H Championship! Features youth interviews and celebration moments.</p>
-                        <a href="#" style="color: #10b981; text-decoration: none;">▶ Watch Video</a>
-                    </div>
                     <div class="highlight-card">
                         <h3>🎥 Youth Build Workshop</h3>
                         <p>Follow our 4-H members as they design and build rockets from scratch, with guidance from adult mentors and safety officers.</p>
