--- a/Pages/launches.html
+++ b/Pages/launches.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Launch Events - 4-H Wake Rocketry</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="CSS/launch-styles.css">
+    <link rel="stylesheet" href="/CSS/launch-styles.css">
 </head>
 <body>
     <div class="side-rockets left">
