--- a/Pages/launches.html
+++ b/Pages/launches.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Launch Events - 4-H Wake Rocketry</title>
-    <link rel="stylesheet" href="/CSS/launch-styles.css">
+    <title>Our Rockets - 4-H Wake Rocketry</title>
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
     <div class="side-rockets left">
-        <img src="Photos/rocket photos/images.jpg" alt="Rocket" class="rocket-photo">
-        <img src="Photos/rocket photos/images (2).jpg" alt="Rocket" class="rocket-photo">
-        <img src="Photos/rocket photos/images (5).jpg" alt="Rocket" class="rocket-photo">
+        <img src="../Photos/rocket photos/images.jpg" alt="Rocket" class="rocket-photo">
+        <img src="../Photos/rocket photos/images (2).jpg" alt="Rocket" class="rocket-photo">
+        <img src="../Photos/rocket photos/images (5).jpg" alt="Rocket" class="rocket-photo">
     </div>
     <div class="side-rockets right">
-        <img src="Photos/rocket photos/images (1).jpg" alt="Rocket" class="rocket-photo">
-        <img src="Photos/rocket photos/images (3).jpg" alt="Rocket" class="rocket-photo">
-        <img src="Photos/rocket photos/images (6).jpg" alt="Rocket" class="rocket-photo">
+        <img src="../Photos/rocket photos/images (1).jpg" alt="Rocket" class="rocket-photo">
+        <img src="../Photos/rocket photos/images (3).jpg" alt="Rocket" class="rocket-photo">
+        <img src="../Photos/rocket photos/images (6).jpg" alt="Rocket" class="rocket-photo">
     </div>
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="4h logo.png" alt="4-H Logo">
+                <img src="../4h logo.png" alt="4-H Logo">
                 4-H Wake Rocketry
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" class="nav-link active">Home</a></li>
-                <li><a href="Pages/team.html" class="nav-link">Team</a></li>
-                <li><a href="Pages/rockets.html" class="nav-link">Rockets</a></li>
-                <li><a href="Pages/launches.html" class="nav-link">Launches</a></li>
-                <li><a href="Pages/gallery.html" class="nav-link">Gallery</a></li>
-                <li><a href="Pages/contact.html" class="nav-link">Contact</a></li>
+                <li><a href="../index.html" class="nav-link active">Home</a></li>
+                <li><a href="team.html" class="nav-link">Team</a></li>
+                <li><a href="rockets.html" class="nav-link">Rockets</a></li>
+                <li><a href="launches.html" class="nav-link">Launches</a></li>
+                <li><a href="gallery.html" class="nav-link">Gallery</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
